[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/BOOKOS.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/BOOKOSB.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/Menu Button.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/Game Over Menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 49
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="Game Over Menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 338
custom_constants/margin_top = 58
custom_constants/margin_left = 320
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VBoxContainer" parent="."]
margin_left = 320.0
margin_top = 58.0
margin_right = 686.0
margin_bottom = 600.0
custom_constants/separation = 100

[node name="Label" type="Label" parent="VSplitContainer"]
margin_right = 366.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VSplitContainer"]
margin_top = 159.0
margin_right = 366.0
margin_bottom = 373.0

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer/CenterContainer"]
margin_left = 24.0
margin_right = 341.0
margin_bottom = 214.0
custom_constants/separation = 44

[node name="Play Button" type="Button" parent="VSplitContainer/CenterContainer/VBoxContainer"]
margin_right = 317.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 3 )
text = "Play Agian"

[node name="Back Button" type="Button" parent="VSplitContainer/CenterContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 317.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "Back To Title Screen"

[node name="Quit Button" type="Button" parent="VSplitContainer/CenterContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 317.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 3 )
text = "Quit Game"
[connection signal="pressed" from="VSplitContainer/CenterContainer/VBoxContainer/Play Button" to="." method="_on_Play_Button_pressed"]
[connection signal="pressed" from="VSplitContainer/CenterContainer/VBoxContainer/Back Button" to="." method="_on_Back_Button_pressed"]
[connection signal="pressed" from="VSplitContainer/CenterContainer/VBoxContainer/Quit Button" to="." method="_on_Quit_Button_pressed"]
